--- a/src/main/resources/templates/rooms.html
+++ b/src/main/resources/templates/rooms.html
@@ -9,8 +9,8 @@
   <h1>SpringTalk</h1>
 
   <!-- room list -->
-  <th:block th:each="room : ${rooms}">
-    <p class="room"><a href="/room/${room.getId()}" th:text="${room.getMessages().get(0).getText()}"></a></p>
+  <th:block th:each="message : ${messages}">
+    <p class="messages"><a href="/room/${message.getRoomId()}" th:text="${message.getText()}"></a></p>
   </th:block>
 
   <!-- create form -->
